# crewAnalyst

./: .env.example  README.md  agent_tester.py  app.py  pyproject.toml
outputs/: report.md
src/crewanalyst/: crew.py  main.py
src/crewanalyst/agents/: anomaly.py  correlation.py  profiler.py  reporter.py  statistician.py  synthesizer.py  viz.py
src/crewanalyst/schema/: anomalies.py  correlations.py  profile.py  stats.py  synthesis.py  visualizations.py
src/crewanalyst/tasks/: tasks.py
src/crewanalyst/tools/: tool_pandas.py  tool_report.py  tool_viz.py  tools_stats.py
templates/: report.html
