[project]
name = "crewanalyst"
version = "0.1.0"
description = "CrewAnalyst using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.14.2",
    "gradio>=6.13.0",
    "scipy>=1.15.3",
    "seaborn>=0.13.2",
]

[project.scripts]
crewanalyst = "crewanalyst.main:run"
run_crew = "crewanalyst.main:run"
train = "crewanalyst.main:train"
replay = "crewanalyst.main:replay"
test = "crewanalyst.main:test"
run_with_trigger = "crewanalyst.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
